# todo-proj

./: .editorconfig  .gitignore  404.html  Cargo.toml  README.md  gen_tasks.py  labeled_tasks.csv  main.py  package-lock.json  script.js  todo.md  todo.txt  train.py
prodo/: README.md  package.json
prodo-manager/: README.md  package.json
sql/: create.sql  delete.sql  fetch.sql  progress.sql
src/: _server.rs  db.rs  main.rs  util.rs
static/: 404.html  doody.js  history.html  home.html  index.html  login.html  note.js  pie.html  predict.html  rec.html  register.html  style.css  template.html
static/css/: dark.css  light.css  style.css
static/js/: history.js  home.js  login.js  pie.js  rec.js  register.js  script.js  service_worker.js  task.js  util.js
