[package]
name = "prodo"
edition = "2024"
exclude = ["src/_server.rs"]

[dependencies]
actix-web = "4"
actix-files = "0.6"
# hyper = { version = "1", features = ["full"] }
# tokio = { version = "1", features = ["full"] }
# http-body-util = "0.1"
# hyper-util = { version = "0.1", features = ["full"] }

mysql = "27.0.0"
