[package]
name = "prodo"
edition = "2024"
exclude = ["src/_server.rs"]

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = "1.0.228"
dotenvy = "0.15.7"
# hyper = { version = "1", features = ["full"] }
# tokio = { version = "1", features = ["full"] }
# http-body-util = "0.1"
# hyper-util = { version = "0.1", features = ["full"] }

mysql = "*"
