[package]
name = "prodo"
edition = "2024"
exclude = ["src/_server.rs"]

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = "1.0.228"
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json"]}
dotenvy = "0.15.7"
sqlx = {version = "0.8", features = ["runtime-tokio", "mysql", "json", "chrono"]}
chrono = { version = "0.4", features = ["serde"] } 
tokio = "1.52.1"
